--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,9 @@
 /bazel-out
 
 # Node
-/GUI/node_modules
+/node_modules
 npm-debug.log
 yarn-error.log
-/Server/node_modules
 
 # IDEs and editors
 .idea/
@@ -37,11 +36,9 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-/server/coverage
 
 # System files
 .DS_Store
 Thumbs.db
 
-#Ignore Cache
-/GUI/.angular/cache
+
